deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: shard-deployment
  labels:
    app   : shard
    env   : prod
    owner : DimaRudik
spec:
  selector:
    matchLabels:
      project: shard-project
  template:
    metadata:
      labels:
        project: shard-project
    spec:
      containers:
        - name : shard-app
          image: dimarudik/shard
          ports:
            - containerPort: 8080
