statefulset-postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - name: tcp
      protocol: TCP
      port: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: shard01
spec:
  serviceName: postgres
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - name: tpc
              protocol: TCP
              containerPort: 5432
